deleting all styles before BEM applying

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background #F1FAEE; 
+    background: red; 
     font-family: "Roboto Condensed", Helvetica, Verdana, sans-serif;
     width: 75%;
     margin: 0 auto;
