after styling menu

--- a/style.css
+++ b/style.css
@@ -6,6 +6,28 @@
     width: 75%;
 }
 
+.navigation{
+    background-color: black;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.navigation__link{
+    padding-right: 5px;
+    padding-left: 5px;
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+    text-decoration: none;
+    border-right: 1px solid white;
+}
+
+.navigation__link--last-one{
+    border-right: none;
+}
+
 .footer{
     background-color: darksalmon;
     margin: 0px auto;
