finished styling index.html

--- a/style.css
+++ b/style.css
@@ -1,18 +1,21 @@
 .main {
-    background-color: darkorange;
     margin: 10px auto;
-    border: 2px solid red;
-    padding: 10px 10px;
-    width: 75%;
+    width: 80%;
+    box-sizing: border-box;
+}
+
+.main__header{
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .navigation{
     background-color: black;
-    width: 100%;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    width: 80%;
+    padding: 10px;
     margin: 0 auto;
     text-align: center;
+    box-sizing: border-box;
 }
 
 .navigation__link{
@@ -28,29 +31,59 @@
     border-right: none;
 }
 
-.footer{
-    background-color: darksalmon;
-    margin: 0px auto;
-    width: 60%;
-    border: 2px solid red;
-    border-radius: 10px;
+.section-intro{
+    padding: 10px 10px;
+    background-color: lightblue;
+    color: darkblue;
+}
+
+.section-intro__paragrapf{
+    text-align: justify;
+}
+
+.section__header{
     text-align: center;
-    padding: 5px 0px;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.article{
+    background-color: lightblue;
+    color: darkblue;
+    padding: 10px 10px;
+}
+
+.article__paragraph{
+    text-align: justify;
+}
+
+.footer{
+    background-color: black;
+    margin: 0px auto;
+    width: 80%;
+    text-align: center;
+    padding: 5px;
+    font-family: 'Courier New', Courier, monospace;
+    color: white;
+    box-sizing: border-box;
 }
 
 .footer__link{
-    color: green;
+    color: darkblue;
     text-decoration: none;
+    font-size: 12px
 }
 
 .footer__link--return-up{
     font-size: small;
-    color: rgb(97, 38, 207);
-    background-color: lightpink;
+    color: black;
+    background-color: white;
     padding: 10px 15px;
     display: inline-block;
     margin-top: 10px;
-    font-family: roboto;
-    border-radius: 40px;
-    border: 1px solid red;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 12px;
+}
+
+.footer__paragraph{
+    font-size: 12px
 }
