--- a/style.css
+++ b/style.css
@@ -35,10 +35,21 @@
     padding: 10px 10px;
     background-color: lightblue;
     color: darkblue;
+    overflow: auto;
 }
 
-.section-intro__paragrapf{
+.section-intro__paragraph{
     text-align: justify;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.section-intro__header{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.section-intro_image{
+    float: left;
+    padding-right: 10px;
 }
 
 .section__header{
@@ -52,8 +63,13 @@
     padding: 10px 10px;
 }
 
+.article__header{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .article__paragraph{
     text-align: justify;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .footer{
