--- a/style.css
+++ b/style.css
@@ -30,7 +30,6 @@ body{
 .navigation-header {
   position: relative;
   overflow: auto;
-  box-sizing: border-box;
 }
 
 .navigation {
@@ -39,9 +38,9 @@ body{
   padding: 10px;
   margin: 10px auto;
   position: fixed;
-  left: 10%;*
-  box-sizing: border-box;
-
+  left: 10%;
+  display: flex;
+  justify-content: center;
 }
 
 .navigation__link {
