before solving main hidden under header problem - last stable commit

--- a/style.css
+++ b/style.css
@@ -11,18 +11,21 @@ html {
 body {
   background-color: #ffe53b;
   background-image: linear-gradient(147deg, #ffe53b 0%, #ff2525 74%);
+  display: block;
 }
 
 .main {
-  margin: 10px auto;
+  margin: 0px auto;
   width: 80%;
-  box-sizing: border-box;
+  display: block;
+  background: hotpink;
 }
 
 .navigation-header {
   background: white;
   min-height: 60px;
   position: fixed;
+  display: block;
   top: 0;
   width: 100%;
 }
@@ -40,6 +43,7 @@ body {
 .navigation__link {
   display: block;
   margin-bottom: 16px;
+  font-style: none;
 }
 
 .hamburger {
@@ -132,7 +136,7 @@ body {
     background-color: rgba(0, 0, 0, 0.7);
     width: 80%;
     padding: 10px;
-    margin: 10px auto;
+    margin: 0px auto;
     position: fixed;
     left: 10%;
     display: flex;
