--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html {
 body {
   background-color: #ffe53b;
   background-image: linear-gradient(147deg, #ffe53b 0%, #ff2525 74%);
+  background-repeat: no-repeat;
   display: block;
 }
 
@@ -159,6 +160,10 @@ body {
     text-decoration: none;
     border-right: 1px solid white;
     margin: 0px;
+  }
+
+  .navigation__link:hover{
+    background-color: rgb(22, 175, 60);
   }
 
   .navigation__link--last-one {
