--- a/scss/style.scss
+++ b/scss/style.scss
@@ -64,7 +64,7 @@ html {
 .main {
   &__header {
     text-align: center;
-    font-family: "Courier New", Courier, monospace;
+    font-family: Arial, Helvetica, sans-serif;
     padding-top: 16px;
     color: darkblue;
   }
@@ -73,7 +73,7 @@ html {
 //SECTION INTRO
 
 .section-intro {
-  padding: 10px 10px;
+  padding: 16px 16px;
   color: darkblue;
   overflow: auto;
   &__paragraph {
@@ -83,28 +83,47 @@ html {
   &__header {
     font-family: Arial, Helvetica, sans-serif;
     color: darkblue;
+    text-align: right;
   }
   &__image {
     float: left;
-    padding-right: 10px;
+    padding-right: 16px;
   }
+}
+
+.section-intro__header::before{
+  content: "";
+  display: inline-block;
+  width: 100%;
+  height: 1.5px;
+  background-color: darkblue;
 }
 
 //SECTION
 
 .section {
   &__header {
-    text-align: center;
-    font-family: "Courier New", Courier, monospace;
+    text-align: right;
+    font-family: Arial, Helvetica, sans-serif;
     color: darkblue;
+    padding-right: 16px;
+    padding-left: 16px;
   }
+}
+
+.section__header::before{
+  content: "";
+  display: inline-block;
+  width: 100%;
+  height: 1.5px;
+  background-color: darkblue;
 }
 
 //ARTICLE
 
 .article {
   color: darkblue;
-  padding: 10px 10px;
+  padding: 16px 16px;
   &__header {
     font-family: Arial, Helvetica, sans-serif;
   }
@@ -112,6 +131,10 @@ html {
     text-align: justify;
     font-family: Arial, Helvetica, sans-serif;
   }
+}
+
+.article__header::before {
+  content: "📚 ";
 }
 
 //FOOTER
@@ -170,10 +193,11 @@ html {
       &--last-one {
         border-right: none;
       }
-      &__:hover {
-        background-color: rgb(22, 175, 60);
-      }
     }
+  }
+
+  .navigation__link:hover {
+    background-color: rgb(22, 175, 60);
   }
 
   .section-intro {
