--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html {
   box-sizing: border-box; }
 
@@ -48,12 +49,12 @@ html {
 
 .main__header {
   text-align: center;
-  font-family: "Courier New", Courier, monospace;
+  font-family: Arial, Helvetica, sans-serif;
   padding-top: 16px;
   color: darkblue; }
 
 .section-intro {
-  padding: 10px 10px;
+  padding: 16px 16px;
   color: darkblue;
   overflow: auto; }
   .section-intro__paragraph {
@@ -61,24 +62,44 @@ html {
     font-family: Arial, Helvetica, sans-serif; }
   .section-intro__header {
     font-family: Arial, Helvetica, sans-serif;
-    color: darkblue; }
+    color: darkblue;
+    text-align: right; }
   .section-intro__image {
     float: left;
-    padding-right: 10px; }
+    padding-right: 16px; }
+
+.section-intro__header::before {
+  content: "";
+  display: inline-block;
+  width: 100%;
+  height: 1.5px;
+  background-color: darkblue; }
 
 .section__header {
-  text-align: center;
-  font-family: "Courier New", Courier, monospace;
-  color: darkblue; }
+  text-align: right;
+  font-family: Arial, Helvetica, sans-serif;
+  color: darkblue;
+  padding-right: 16px;
+  padding-left: 16px; }
+
+.section__header::before {
+  content: "";
+  display: inline-block;
+  width: 100%;
+  height: 1.5px;
+  background-color: darkblue; }
 
 .article {
   color: darkblue;
-  padding: 10px 10px; }
+  padding: 16px 16px; }
   .article__header {
     font-family: Arial, Helvetica, sans-serif; }
   .article__paragraph {
     text-align: justify;
     font-family: Arial, Helvetica, sans-serif; }
+
+.article__header::before {
+  content: "📚 "; }
 
 .footer {
   background-color: black;
@@ -124,8 +145,8 @@ html {
       margin: 0px; }
       .navigation__link--last-one {
         border-right: none; }
-      .navigation__link__:hover {
-        background-color: #16af3c; }
+  .navigation__link:hover {
+    background-color: #16af3c; }
   .section-intro {
     width: 40%;
     margin: 0 auto; }
