build(npm): Bump lodash from 4.17.15 to 4.17.19
solution-type: manually npm audit fix

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -215,6 +215,13 @@ $headreBackground: #E5D8C0;
     &--red{
       color: #BA0000;
     }
+    &--link{
+      text-decoration: none;
+      color: #0645ad;
+      &:visited{
+        color:#0b0080;
+      }
+    }   
   }
   &__subheader{
     border: $borderStyle;
